put Technical Data case's data into .CSV file

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#List-Exogenous-SymPy-Variables\"><span class=\"toc-item-num\">3 - </span>List Exogenous <code>SymPy</code> Variables</a></div><div class=\"lev1\"><a href=\"#Build-the-Structure-of-the-Valuation-Model\"><span class=\"toc-item-num\">4 - </span>Build the Structure of the Valuation Model</a></div><div class=\"lev1\"><a href=\"#Calculate-Actual-Values\"><span class=\"toc-item-num\">5 - </span>Calculate Actual Values</a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#List-Exogenous-SymPy-Variables\"><span class=\"toc-item-num\">3 - </span>List Exogenous <code>SymPy</code> Variables</a></div><div class=\"lev1\"><a href=\"#Build-Structure-of-Model-for-Valuation-(conditional-upon-survival)\"><span class=\"toc-item-num\">4 - </span>Build Structure of Model for Valuation (conditional upon survival)</a></div><div class=\"lev1\"><a href=\"#Calculate-Actual-Values\"><span class=\"toc-item-num\">5 - </span>Calculate Actual Values</a></div>"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build the Structure of the Valuation Model"
+    "# Build Structure of Model for Valuation (conditional upon survival)"
    ]
   },
   {
@@ -420,8 +420,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import data:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Revenue</th>\n",
+       "      <th>OpEx</th>\n",
+       "      <th>extra_executive_compensation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1981</th>\n",
+       "      <td>288000</td>\n",
+       "      <td>-242774</td>\n",
+       "      <td>-2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1982</th>\n",
+       "      <td>799350</td>\n",
+       "      <td>-308991</td>\n",
+       "      <td>-75000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1983</th>\n",
+       "      <td>1181700</td>\n",
+       "      <td>-410010</td>\n",
+       "      <td>-140000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Revenue    OpEx  extra_executive_compensation\n",
+       "Year                                               \n",
+       "1981   288000 -242774                         -2500\n",
+       "1982   799350 -308991                        -75000\n",
+       "1983  1181700 -410010                       -140000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df = \\\n",
+    "    pandas.read_csv(\n",
+    "        'data/Technical Data.csv',\n",
+    "        index_col='Year')\n",
+    "\n",
+    "data_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -464,18 +542,18 @@
     "exo_vars_values_dict.update(\n",
     "    dict(\n",
     "        zip([i.name for i in Rev],\n",
-    "            [0, 288000, 799350, 1181700]) +\n",
+    "            [0] + data_df.Revenue.tolist()) +\n",
     "        zip([i.name for i in OpEx___neg],\n",
-    "            [0, -242774, -308991, -410010]) +\n",
+    "            [0] + data_df.OpEx.tolist()) +\n",
     "        zip([i.name for i in extra_exec_comp___neg],\n",
-    "            [0, -2500, -75000, -140000])))\n",
+    "            [0] + data_df.extra_executive_compensation.tolist())))\n",
     "\n",
     "pprint(exo_vars_values_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -491,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -512,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -521,6 +599,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "VALUATION CONDITIONAL UPON SURVIVAL\n",
+      "___________________________________\n",
+      "\n",
       "U.S. Corporate Tax Rate =   48%\n",
       "\n",
       "Risk-Free Rate =   11%\n",
@@ -619,13 +700,16 @@
        "Terminal Value                   0        0        0 3,225,064"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# present whole calculations\n",
+    "\n",
+    "print('VALUATION CONDITIONAL UPON SURVIVAL')\n",
+    "print('___________________________________\\n')\n",
     "\n",
     "print('U.S. Corporate Tax Rate =   %s\\n' % '{:.0%}'.format(calc(corp_tax_rate)))\n",
     "\n",
