refactor Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#List-Exogenous-SymPy-Variables\"><span class=\"toc-item-num\">3 - </span>List Exogenous <code>SymPy</code> Variables</a></div><div class=\"lev1\"><a href=\"#Build-Structure-of-Model-for-Valuation-(conditional-upon-survival)\"><span class=\"toc-item-num\">4 - </span>Build Structure of Model for Valuation (conditional upon survival)</a></div><div class=\"lev1\"><a href=\"#Calculate-Actual-Values\"><span class=\"toc-item-num\">5 - </span>Calculate Actual Values</a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#List-Exogenous-SymPy-Variables\"><span class=\"toc-item-num\">3 - </span>List Exogenous <code>SymPy</code> Variables</a></div><div class=\"lev1\"><a href=\"#Build-Structure-of-Model-for-Valuation-(conditional-upon-survival)\"><span class=\"toc-item-num\">4 - </span>Build Structure of Model for Valuation <em>(conditional upon survival)</em></a></div><div class=\"lev1\"><a href=\"#Calculate-Actual-Values\"><span class=\"toc-item-num\">5 - </span>Calculate Actual Values</a></div>"
    ]
   },
   {
@@ -81,7 +81,8 @@
     "YEAR_0 = 1980\n",
     "\n",
     "# Number of Pro-Forma Years EXCLUDING Year 0\n",
-    "NB_PRO_FORMA_YEARS = 3"
+    "NB_PRO_FORMA_YEARS = 3\n",
+    "FINAL_PRO_FORMA_YEAR = YEAR_0 + NB_PRO_FORMA_YEARS"
    ]
   },
   {
@@ -134,15 +135,15 @@
    "source": [
     "# Cash Flow components\n",
     "Rev = sympy.symbols(\n",
-    "    'Rev_%d:%d' % (YEAR_0, YEAR_0 + NB_PRO_FORMA_YEARS + 1))\n",
+    "    'Rev_%d:%d' % (YEAR_0, FINAL_PRO_FORMA_YEAR + 1))\n",
     "print('Revenue variables:\\n', Rev)\n",
     "\n",
     "OpEx___neg = sympy.symbols(\n",
-    "    'OpEx___neg_%d:%d' % (YEAR_0, YEAR_0 + NB_PRO_FORMA_YEARS + 1))\n",
+    "    'OpEx___neg_%d:%d' % (YEAR_0, FINAL_PRO_FORMA_YEAR + 1))\n",
     "print('\\nOperating Expenses (negative) variables:\\n', OpEx___neg)\n",
     "\n",
     "extra_exec_comp___neg = sympy.symbols(\n",
-    "    'extra_exec_comp___neg_%d:%d' % (YEAR_0, YEAR_0 + NB_PRO_FORMA_YEARS + 1))\n",
+    "    'extra_exec_comp___neg_%d:%d' % (YEAR_0, FINAL_PRO_FORMA_YEAR + 1))\n",
     "print('\\nExtra Executive Compensation (negative) variables:\\n', extra_exec_comp___neg)\n",
     "\n",
     "\n",
@@ -183,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build Structure of Model for Valuation (conditional upon survival)"
+    "# Build Structure of Model for Valuation _(conditional upon survival)_"
    ]
   },
   {
@@ -498,6 +499,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exogenous Variables' values:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
@@ -552,6 +560,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function to calculate values from `SymPy` expression:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
@@ -559,7 +574,6 @@
    },
    "outputs": [],
    "source": [
-    "# function to calculate values from SymPy expression\n",
     "def calc(x):\n",
     "    if isinstance(x, (list, tuple)):\n",
     "        return [float(calc(i)) for i in x]\n",
@@ -568,29 +582,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
    "source": [
-    "# populate Valuation Calculations data frame\n",
-    "val_calcs_df = pandas.DataFrame(index=['Year 0', 1981, 1982, 1983])\n",
-    "\n",
-    "val_calcs_df['Revenue'] = calc(Rev)\n",
-    "val_calcs_df['Operating Expenses'] = calc(OpEx___neg)\n",
-    "val_calcs_df['Adj. for Extra Exec. Comp.'] = calc(extra_exec_comp___neg)\n",
-    "val_calcs_df['EBIT'] = calc(EBIT)\n",
-    "val_calcs_df['EBIAT'] = calc(EBIAT)\n",
-    "val_calcs_df['FCF before Terminal Value'] = calc(FCF_before_TV)\n",
-    "val_calcs_df['Terminal Value'] = 0\n",
-    "val_calcs_df.loc[1983, 'Terminal Value'] = calc(TerminalValue)"
+    "Valuation Calculations:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -700,14 +702,12 @@
        "Terminal Value                   0        0        0 3,225,064"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# present whole calculations\n",
-    "\n",
     "print('VALUATION CONDITIONAL UPON SURVIVAL')\n",
     "print('___________________________________\\n')\n",
     "\n",
@@ -726,10 +726,20 @@
     "print('Valuation of TV =   $%.2f MM' % (calc(val_of_terminal_val) / 1e6))\n",
     "print('\\nVALUATION =   $%.2f MM\\n' % (calc(val) / 1e6))\n",
     "\n",
-    "# print Valuation Calcs data frame\n",
+    "print('Detailed Cash Flow Calcs:')\n",
+    "val_calcs_df = pandas.DataFrame(index=['Year 0', 1981, 1982, 1983])\n",
     "# ref: http://pandas.pydata.org/pandas-docs/stable/generated/pandas.set_option.html\n",
     "pandas.options.display.float_format = '{:,.0f}'.format\n",
-    "print('Detailed Cash Flow Calcs:')\n",
+    "\n",
+    "val_calcs_df['Revenue'] = calc(Rev)\n",
+    "val_calcs_df['Operating Expenses'] = calc(OpEx___neg)\n",
+    "val_calcs_df['Adj. for Extra Exec. Comp.'] = calc(extra_exec_comp___neg)\n",
+    "val_calcs_df['EBIT'] = calc(EBIT)\n",
+    "val_calcs_df['EBIAT'] = calc(EBIAT)\n",
+    "val_calcs_df['FCF before Terminal Value'] = calc(FCF_before_TV)\n",
+    "val_calcs_df['Terminal Value'] = 0\n",
+    "val_calcs_df.loc[1983, 'Terminal Value'] = calc(TerminalValue)\n",
+    "\n",
     "val_calcs_df.T"
    ]
   }
