minor refactoring for Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -618,7 +618,7 @@
       "Valuation of FCF before TV =   $0.31 MM\n",
       "Valuation of TV =   $1.91 MM\n",
       "\n",
-      "VALUATION =   $2.23 MM\n",
+      "VALUATION | survival =   $2.23 MM\n",
       "\n",
       "Detailed Cash Flow Calcs:\n"
      ]
@@ -724,7 +724,7 @@
     "\n",
     "print('Valuation of FCF before TV =   $%.2f MM' % (calc(val_of_FCF_before_TV) / 1e6))\n",
     "print('Valuation of TV =   $%.2f MM' % (calc(val_of_terminal_val) / 1e6))\n",
-    "print('\\nVALUATION =   $%.2f MM\\n' % (calc(val) / 1e6))\n",
+    "print('\\nVALUATION | survival =   $%.2f MM\\n' % (calc(val) / 1e6))\n",
     "\n",
     "print('Detailed Cash Flow Calcs:')\n",
     "val_calcs_df = pandas.DataFrame(index=['Year 0', 1981, 1982, 1983])\n",
@@ -738,7 +738,7 @@
     "val_calcs_df['EBIAT'] = calc(EBIAT)\n",
     "val_calcs_df['FCF before Terminal Value'] = calc(FCF_before_TV)\n",
     "val_calcs_df['Terminal Value'] = 0\n",
-    "val_calcs_df.loc[1983, 'Terminal Value'] = calc(TerminalValue)\n",
+    "val_calcs_df.loc[FINAL_PRO_FORMA_YEAR, 'Terminal Value'] = calc(TerminalValue)\n",
     "\n",
     "val_calcs_df.T"
    ]
