minor edits to Technical Data case

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -34,6 +34,7 @@
    ],
    "source": [
     "from __future__ import print_function\n",
+    "import numpy\n",
     "import pandas\n",
     "from pprint import pprint\n",
     "import sympy\n",
@@ -682,9 +683,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Terminal Value</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
+       "      <td>nan</td>\n",
        "      <td>3,225,064</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -699,7 +700,7 @@
        "EBIT                             0   42,726  415,359   631,690\n",
        "EBIAT                            0   22,218  215,987   328,479\n",
        "FCF before Terminal Value        0   22,218  215,987   328,479\n",
-       "Terminal Value                   0        0        0 3,225,064"
+       "Terminal Value                 nan      nan      nan 3,225,064"
       ]
      },
      "execution_count": 14,
@@ -727,7 +728,7 @@
     "print('\\nVALUATION | survival =   $%.2f MM\\n' % (calc(val) / 1e6))\n",
     "\n",
     "print('Detailed Cash Flow Calcs:')\n",
-    "val_calcs_df = pandas.DataFrame(index=['Year 0', 1981, 1982, 1983])\n",
+    "val_calcs_df = pandas.DataFrame(index=['Year 0'] + range(YEAR_0 + 1, FINAL_PRO_FORMA_YEAR + 1))\n",
     "# ref: http://pandas.pydata.org/pandas-docs/stable/generated/pandas.set_option.html\n",
     "pandas.options.display.float_format = '{:,.0f}'.format\n",
     "\n",
@@ -737,7 +738,7 @@
     "val_calcs_df['EBIT'] = calc(EBIT)\n",
     "val_calcs_df['EBIAT'] = calc(EBIAT)\n",
     "val_calcs_df['FCF before Terminal Value'] = calc(FCF_before_TV)\n",
-    "val_calcs_df['Terminal Value'] = 0\n",
+    "val_calcs_df['Terminal Value'] = numpy.nan\n",
     "val_calcs_df.loc[FINAL_PRO_FORMA_YEAR, 'Terminal Value'] = calc(TerminalValue)\n",
     "\n",
     "val_calcs_df.T"
