minor edit to Technical Data case

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -306,7 +306,8 @@
     "            'Val_of_TV',\n",
     "            'Val'],\n",
     "        Revenue=[0.] + data_df.Revenue.tolist(),\n",
-    "        OpEx=[0.] + map(lambda x: x[0] + x[1], zip(data_df.OpEx, data_df.extra_executive_compensation)),\n",
+    "        OpEx=[0.] + map(lambda x: x[0] + x[1],\n",
+    "                        zip(data_df.OpEx, data_df.extra_executive_compensation)),\n",
     "        CorpTaxRate=US_CORP_TAX_RATE,\n",
     "        RiskFreeRate=RISK_FREE_RATE,\n",
     "        PublicMarketReturn=PUB_MKT_RETURN,\n",
