update Technical Data case

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -68,6 +68,12 @@
    },
    "outputs": [],
    "source": [
+    "# Year 0\n",
+    "YEAR_0 = 1980\n",
+    "\n",
+    "# Number of Pro-Forma Years EXCLUDING Year 0\n",
+    "NB_PRO_FORMA_YEARS = 3\n",
+    "\n",
     "# U.S. Corporate Tax rate\n",
     "US_CORP_TAX_RATE = .48\n",
     "\n",
@@ -82,13 +88,7 @@
     "PEVC_BETA_FOR_PRO_FORMA_PERIOD = 2.\n",
     "\n",
     "# Long-Term Growth Rate\n",
-    "LONG_TERM_GROWTH_RATE = .08\n",
-    "\n",
-    "# Year 0\n",
-    "YEAR_0 = 1980\n",
-    "\n",
-    "# Number of Pro-Forma Years EXCLUDING Year 0\n",
-    "NB_PRO_FORMA_YEARS = 3"
+    "LONG_TERM_GROWTH_RATE = .08"
    ]
   },
   {
