update RightNow workbook

--- a/RightNow Technologies/RightNow Technologies.ipynb
+++ b/RightNow Technologies/RightNow Technologies.ipynb
@@ -19,11 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using gpu device 0: GeForce GT 750M\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import print_function\n",
     "import numpy\n",
@@ -42,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -123,6 +131,8 @@
       "    NWCChange_over_RevenueChange\n",
       "    FCF\n",
       "    TV\n",
+      "    TV_RevenueMultiple\n",
+      "    TV_EBITMultiple\n",
       "    Val_of_FCF\n",
       "    Val_of_TV\n",
       "    Val\n",
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +197,7 @@
        "2004  60000000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -223,6 +233,7 @@
       "    EBIAT\n",
       "    FA\n",
       "    FA_over_Revenue\n",
+      "    CapEx\n",
       "    NWC\n",
       "    NWC_over_Revenue\n",
       "    NWCChange\n",
@@ -258,7 +269,7 @@
     "            'FIXED ASSETS & CAPEX calcs:',\n",
     "            'FA',\n",
     "            'FA_over_Revenue',\n",
-    "            'CapEx'\n",
+    "            'CapEx',\n",
     "            '       ',\n",
     "            'NET WORKING CAPITAL calcs:',\n",
     "            'NWC',\n",
@@ -288,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -623,6 +634,22 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CapEx</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>6.000</td>\n",
+       "      <td>3.000</td>\n",
+       "      <td>3.600</td>\n",
+       "      <td>3.780</td>\n",
+       "      <td>3.276</td>\n",
+       "      <td>3.931</td>\n",
+       "      <td>4.717</td>\n",
+       "      <td>5.661</td>\n",
+       "      <td>6.793</td>\n",
+       "      <td>8.152</td>\n",
+       "      <td>9.782</td>\n",
+       "      <td>2.935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -886,7 +913,8 @@
        "FIXED ASSETS & CAPEX calcs:                                                    \n",
        "FA                            0.000   6.000   9.000  12.600  16.380   19.656   \n",
        "FA_over_Revenue               0.000   0.100   0.100   0.100   0.100    0.100   \n",
-       "CapEx                                                                          \n",
+       "CapEx                         0.000   6.000   3.000   3.600   3.780    3.276   \n",
+       "                                                                               \n",
        "NET WORKING CAPITAL calcs:                                                     \n",
        "NWC                         -14.650 -36.000 -54.000 -75.600 -98.280 -117.936   \n",
        "NWC_over_Revenue             -0.500  -0.600  -0.600  -0.600  -0.600   -0.600   \n",
@@ -922,7 +950,8 @@
        "FIXED ASSETS & CAPEX calcs:                                                \n",
        "FA                            23.587   28.305   33.966   40.759   48.910   \n",
        "FA_over_Revenue                0.100    0.100    0.100    0.100    0.100   \n",
-       "CapEx                                                                      \n",
+       "CapEx                          3.931    4.717    5.661    6.793    8.152   \n",
+       "                                                                           \n",
        "NET WORKING CAPITAL calcs:                                                 \n",
        "NWC                         -141.523 -169.828 -203.793 -244.552 -293.463   \n",
        "NWC_over_Revenue              -0.600   -0.600   -0.600   -0.600   -0.600   \n",
@@ -958,7 +987,8 @@
        "FIXED ASSETS & CAPEX calcs:                    \n",
        "FA                            58.693   61.627  \n",
        "FA_over_Revenue                0.100    0.100  \n",
-       "CapEx                                          \n",
+       "CapEx                          9.782    2.935  \n",
+       "                                               \n",
        "NET WORKING CAPITAL calcs:                     \n",
        "NWC                         -352.155 -369.763  \n",
        "NWC_over_Revenue              -0.600   -0.600  \n",
@@ -975,7 +1005,7 @@
        "Val                                            "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
