--- a/README.ipynb
+++ b/README.ipynb
@@ -29,7 +29,9 @@
     "\n",
     "- __CAPM formula__: $r_i = r_f + \\beta \\cdot (r_m - r_f)$\n",
     "\n",
-    "- __Free Cash Flow__ calculation: $\\text{FCF} = (1 - \\text{corp tax rate}) \\cdot \\text{EBIT} + \\text{Depreciation} - \\text{Net Investments}$\n"
+    "- __Free Cash Flow__ calculation: $\\text{FCF} = (1 - \\text{corp tax rate}) \\cdot \\text{EBIT} + \\text{Depreciation} - \\text{Net Investments}$\n",
+    "\n",
+    "    where $\\text{Net Investments} = \\text{CapEx Investments} + \\text{Change in Net Working Capital} - \\text{Divestments}$\n"
    ]
   }
  ],
