update UltraVisual workbook

--- a/UltraVisual Medical Systems/UltraVisual Medical Systems.ipynb
+++ b/UltraVisual Medical Systems/UltraVisual Medical Systems.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#Create-NewVentureValuationModel\"><span class=\"toc-item-num\">3 - </span>Create <code>NewVentureValuationModel</code></a></div><div class=\"lev1\"><a href=\"#Import-UltraVisual-data\"><span class=\"toc-item-num\">4 - </span>Import UltraVisual data</a></div><div class=\"lev1\"><a href=\"#Set-Valuation-Outputs-to-Display\"><span class=\"toc-item-num\">5 - </span>Set Valuation Outputs to Display</a></div><div class=\"lev1\"><a href=\"#DCF-Valuation\"><span class=\"toc-item-num\">6 - </span>DCF Valuation</a></div><div class=\"lev1\"><a href=\"#Valuation-with-Exit-Multiple\"><span class=\"toc-item-num\">7 - </span>Valuation with Exit Multiple</a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#Create-Valuation-Model\"><span class=\"toc-item-num\">3 - </span>Create Valuation Model</a></div><div class=\"lev1\"><a href=\"#Import-UltraVisual-data\"><span class=\"toc-item-num\">4 - </span>Import UltraVisual data</a></div><div class=\"lev1\"><a href=\"#Set-Valuation-Outputs-to-Display\"><span class=\"toc-item-num\">5 - </span>Set Valuation Outputs to Display</a></div><div class=\"lev1\"><a href=\"#DCF-Valuation\"><span class=\"toc-item-num\">6 - </span>DCF Valuation</a></div><div class=\"lev1\"><a href=\"#Valuation-with-Exit-Multiple\"><span class=\"toc-item-num\">7 - </span>Valuation with Exit Multiple</a></div>"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "import numpy\n",
     "import pandas\n",
     "\n",
-    "from FinSymPy.NewVenture import NewVentureValuationModel\n",
+    "from FinSymPy.Valuation import ValuationModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
    ]
   },
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create `NewVentureValuationModel`"
+    "# Create Valuation Model"
    ]
   },
   {
@@ -153,7 +153,7 @@
    ],
    "source": [
     "model = \\\n",
-    "    NewVentureValuationModel(\n",
+    "    ValuationModel(\n",
     "        venture_name='UltraVisualMedicalSystems',\n",
     "        year_0=YEAR_0,\n",
     "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)"
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -1290,7 +1290,7 @@
        "Val                                                       "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
