--- a/RightNow Technologies/RightNow Technologies.ipynb
+++ b/RightNow Technologies/RightNow Technologies.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#Create-NewVentureValuationModel\"><span class=\"toc-item-num\">3 - </span>Create <code>NewVentureValuationModel</code></a></div><div class=\"lev1\"><a href=\"#Run-NewVentureValuationModel\"><span class=\"toc-item-num\">4 - </span>Run <code>NewVentureValuationModel</code></a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#Create-Valuation-Model\"><span class=\"toc-item-num\">3 - </span>Create Valuation Model</a></div><div class=\"lev1\"><a href=\"#Import-Data\"><span class=\"toc-item-num\">4 - </span>Import Data</a></div><div class=\"lev1\"><a href=\"#Set-Outputs-to-Display\"><span class=\"toc-item-num\">5 - </span>Set Outputs to Display</a></div><div class=\"lev1\"><a href=\"#Run-Valuation-Model\"><span class=\"toc-item-num\">6 - </span>Run Valuation Model</a></div>"
    ]
   },
   {
@@ -37,8 +37,19 @@
     "import numpy\n",
     "import pandas\n",
     "\n",
-    "from FinSymPy.NewVenture import NewVentureValuationModel\n",
+    "from FinSymPy.Valuation import ValuationModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print_live_in_ipython()"
    ]
   },
   {
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -86,12 +97,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create `NewVentureValuationModel`"
+    "# Create Valuation Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -142,7 +153,7 @@
    ],
    "source": [
     "model = \\\n",
-    "    NewVentureValuationModel(\n",
+    "    ValuationModel(\n",
     "        venture_name='RightNowTechnologies',\n",
     "        year_0=YEAR_0,\n",
     "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)"
@@ -152,12 +163,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Run `NewVentureValuationModel`"
+    "# Import Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +208,7 @@
        "2004  60000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,8 +223,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set Outputs to Display"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "outputs = \\\n",
+    "    ['ProFormaPeriodDiscountRate', 'StabilizedDiscountRate',\n",
+    "     ' ',\n",
+    "     'REVENUE calcs:', 'Revenue', 'RevenueGrowth',\n",
+    "     '  ',\n",
+    "     'EBIT calcs:', 'EBIT', 'EBITMargin', 'EBITGrowth',\n",
+    "     '   ',\n",
+    "     'EBIAT calcs:', 'CorpTaxRate', 'EBIAT',\n",
+    "     '    ',\n",
+    "     'FIXED ASSETS & CAPEX calcs:', 'FA', 'FA_over_Revenue', 'CapEx',\n",
+    "     '     ',\n",
+    "     'NET WORKING CAPITAL calcs:', 'NWC', 'NWC_over_Revenue', 'NWCChange',\n",
+    "     '      ',\n",
+    "     'FCF & TV calcs:', 'FCF', 'LongTermGrowthRate', 'TV', 'TV_RevenueMultiple', 'TV_EBITMultiple',\n",
+    "     '       ',\n",
+    "     'VALUATION calcs:', 'Val_of_FCF', 'Val_of_TV', 'Val']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run Valuation Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -239,71 +290,14 @@
       "    NWCChange\n",
       "    FCF\n",
       "    TV\n",
+      "    TV_RevenueMultiple\n",
+      "    TV_EBITMultiple\n",
       "    Val_of_FCF\n",
       "    Val_of_TV\n",
       "    Val\n",
       "done!\n"
      ]
-    }
-   ],
-   "source": [
-    "results = \\\n",
-    "    model(\n",
-    "        outputs=[\n",
-    "            'ProFormaPeriodDiscountRate',\n",
-    "            'StabilizedDiscountRate',\n",
-    "            '   ',\n",
-    "            'REVENUE calcs:',\n",
-    "            'Revenue',\n",
-    "            'RevenueGrowth',\n",
-    "            '    ',\n",
-    "            'EBIT calcs:',\n",
-    "            'EBIT',\n",
-    "            'EBITMargin',\n",
-    "            'EBITGrowth',\n",
-    "            '     ',\n",
-    "            'EBIAT calcs:',\n",
-    "            'CorpTaxRate',\n",
-    "            'EBIAT',\n",
-    "            '      ',\n",
-    "            'FIXED ASSETS & CAPEX calcs:',\n",
-    "            'FA',\n",
-    "            'FA_over_Revenue',\n",
-    "            'CapEx',\n",
-    "            '       ',\n",
-    "            'NET WORKING CAPITAL calcs:',\n",
-    "            'NWC',\n",
-    "            'NWC_over_Revenue',\n",
-    "            'NWCChange',\n",
-    "            '        ',\n",
-    "            'FCF & TV calcs:',\n",
-    "            'FCF',\n",
-    "            'LongTermGrowthRate',\n",
-    "            'TV',\n",
-    "            '         ',\n",
-    "            'VALUATION calcs:',\n",
-    "            'Val_of_FCF',\n",
-    "            'Val_of_TV',\n",
-    "            'Val'],\n",
-    "        Revenue=(data_df.Revenue.astype(numpy.float32) / 1e6).tolist(),\n",
-    "        RevenueGrowth=REV_GROWTH_RATES,\n",
-    "        EBITMargin=EBIT_MARGINS,\n",
-    "        CorpTaxRate=US_CORP_TAX_RATE,\n",
-    "        FA_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [FIXED_ASSETS_OVER_REVENUE_RATIO],\n",
-    "        NWC=[-14.65],\n",
-    "        NWC_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [NET_WORKING_CAPITAL_OVER_REVENUE_RATIO],\n",
-    "        ProFormaPeriodDiscountRate=DISCOUNT_RATE,\n",
-    "        StabilizedDiscountRate=DISCOUNT_RATE,\n",
-    "        LongTermGrowthRate=LONG_TERM_GROWTH_RATE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -809,6 +803,38 @@
        "      <td>400.861</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>TV_RevenueMultiple</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0.650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TV_EBITMultiple</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>6.505</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th></th>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -924,6 +950,8 @@
        "FCF                           0.000  15.350  18.600  24.300  28.728   28.174   \n",
        "LongTermGrowthRate                                                             \n",
        "TV                                                                             \n",
+       "TV_RevenueMultiple                                                             \n",
+       "TV_EBITMultiple                                                                \n",
        "                                                                               \n",
        "VALUATION calcs:                                                               \n",
        "Val_of_FCF                  158.772                                            \n",
@@ -961,6 +989,8 @@
        "FCF                           33.808   40.570   48.684   58.421   70.105   \n",
        "LongTermGrowthRate                                                         \n",
        "TV                                                                         \n",
+       "TV_RevenueMultiple                                                         \n",
+       "TV_EBITMultiple                                                            \n",
        "                                                                           \n",
        "VALUATION calcs:                                                           \n",
        "Val_of_FCF                                                                 \n",
@@ -998,6 +1028,8 @@
        "FCF                           84.126   51.649  \n",
        "LongTermGrowthRate                      0.040  \n",
        "TV                                    400.861  \n",
+       "TV_RevenueMultiple                      0.650  \n",
+       "TV_EBITMultiple                         6.505  \n",
        "                                               \n",
        "VALUATION calcs:                               \n",
        "Val_of_FCF                                     \n",
@@ -1005,12 +1037,26 @@
        "Val                                            "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "results = \\\n",
+    "    model(\n",
+    "        outputs=outputs,\n",
+    "        Revenue=(data_df.Revenue.astype(numpy.float32) / 1e6).tolist(),\n",
+    "        RevenueGrowth=REV_GROWTH_RATES,\n",
+    "        EBITMargin=EBIT_MARGINS,\n",
+    "        CorpTaxRate=US_CORP_TAX_RATE,\n",
+    "        FA_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [FIXED_ASSETS_OVER_REVENUE_RATIO],\n",
+    "        NWC=[-14.65],\n",
+    "        NWC_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [NET_WORKING_CAPITAL_OVER_REVENUE_RATIO],\n",
+    "        ProFormaPeriodDiscountRate=DISCOUNT_RATE,\n",
+    "        StabilizedDiscountRate=DISCOUNT_RATE,\n",
+    "        LongTermGrowthRate=LONG_TERM_GROWTH_RATE)\n",
+    "\n",
     "pandas.options.display.float_format = '{:,.3f}'.format\n",
     "results['data_frame'].T"
    ]
