update Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -36,7 +36,7 @@
     "from __future__ import print_function\n",
     "import pandas\n",
     "\n",
-    "from FinSymPy.Valuation import ValuationModel\n",
+    "from CorpFin.Valuation import ValuationModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
    ]
   },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -176,35 +176,29 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Revenue</th>\n",
-       "      <th>OpEx</th>\n",
-       "      <th>extra_executive_compensation</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Year</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>1981</th>\n",
+       "      <th>1982</th>\n",
+       "      <th>1983</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1981</th>\n",
+       "      <th>Revenue</th>\n",
        "      <td>288000</td>\n",
-       "      <td>242774</td>\n",
-       "      <td>2500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1982</th>\n",
        "      <td>799350</td>\n",
-       "      <td>308991</td>\n",
-       "      <td>75000</td>\n",
+       "      <td>1181700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1983</th>\n",
-       "      <td>1181700</td>\n",
+       "      <th>OpEx</th>\n",
+       "      <td>242774</td>\n",
+       "      <td>308991</td>\n",
        "      <td>410010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>extra_executive_compensation</th>\n",
+       "      <td>2500</td>\n",
+       "      <td>75000</td>\n",
        "      <td>140000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -212,14 +206,13 @@
        "</div>"
       ],
       "text/plain": [
-       "      Revenue    OpEx  extra_executive_compensation\n",
-       "Year                                               \n",
-       "1981   288000  242774                          2500\n",
-       "1982   799350  308991                         75000\n",
-       "1983  1181700  410010                        140000"
+       "Year                            1981    1982     1983\n",
+       "Revenue                       288000  799350  1181700\n",
+       "OpEx                          242774  308991   410010\n",
+       "extra_executive_compensation    2500   75000   140000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +223,7 @@
     "        'data/Technical Data.csv',\n",
     "        index_col='Year')\n",
     "\n",
-    "data_df"
+    "data_df.T"
    ]
   },
   {
