update RightNow Technologies workbook

--- a/RightNow Technologies/RightNow Technologies.ipynb
+++ b/RightNow Technologies/RightNow Technologies.ipynb
@@ -37,7 +37,7 @@
     "import numpy\n",
     "import pandas\n",
     "\n",
-    "from FinSymPy.Valuation import ValuationModel\n",
+    "from CorpFin.Valuation import ValuationModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
    ]
   },
@@ -180,21 +180,15 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Revenue</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Year</th>\n",
-       "      <th></th>\n",
+       "      <th>2003</th>\n",
+       "      <th>2004</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2003</th>\n",
+       "      <th>Revenue</th>\n",
        "      <td>29300000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2004</th>\n",
        "      <td>60000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -202,10 +196,8 @@
        "</div>"
       ],
       "text/plain": [
-       "       Revenue\n",
-       "Year          \n",
-       "2003  29300000\n",
-       "2004  60000000"
+       "Year         2003      2004\n",
+       "Revenue  29300000  60000000"
       ]
      },
      "execution_count": 5,
@@ -219,7 +211,7 @@
     "        'data/RightNow Technologies.csv',\n",
     "        index_col='Year')\n",
     "    \n",
-    "data_df"
+    "data_df.T"
    ]
   },
   {
@@ -250,7 +242,8 @@
     "     '     ',\n",
     "     'NET WORKING CAPITAL calcs:', 'NWC', 'NWC_over_Revenue', 'NWCChange',\n",
     "     '      ',\n",
-    "     'FCF & TV calcs:', 'FCF', 'LongTermGrowthRate', 'TV', 'TV_RevenueMultiple', 'TV_EBITMultiple',\n",
+    "     'FCF & TV calcs:', 'FCF', 'LongTermGrowthRate',\n",
+    "     'TV', 'TV_RevenueMultiple', 'TV_EBITMultiple',\n",
     "     '       ',\n",
     "     'VALUATION calcs:', 'Val_of_FCF', 'Val_of_TV', 'Val']"
    ]
@@ -1051,6 +1044,7 @@
     "        EBITMargin=EBIT_MARGINS,\n",
     "        CorpTaxRate=US_CORP_TAX_RATE,\n",
     "        FA_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [FIXED_ASSETS_OVER_REVENUE_RATIO],\n",
+    "        CapEx_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [0.],\n",
     "        NWC=[-14.65],\n",
     "        NWC_over_Revenue=(NB_PRO_FORMA_YEARS + 1) * [NET_WORKING_CAPITAL_OVER_REVENUE_RATIO],\n",
     "        ProFormaPeriodDiscountRate=DISCOUNT_RATE,\n",
