update edocs workbook

--- a/edocs/edocs.ipynb
+++ b/edocs/edocs.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#Create-NewVentureValuationModel\"><span class=\"toc-item-num\">3 - </span>Create <code>NewVentureValuationModel</code></a></div><div class=\"lev1\"><a href=\"#Import-Data\"><span class=\"toc-item-num\">4 - </span>Import Data</a></div><div class=\"lev1\"><a href=\"#Set-Outputs-to-Display\"><span class=\"toc-item-num\">5 - </span>Set Outputs to Display</a></div><div class=\"lev1\"><a href=\"#Valuation-by-DCF\"><span class=\"toc-item-num\">6 - </span>Valuation by DCF</a></div><div class=\"lev1\"><a href=\"#Valuation-with-Exit-Multiple\"><span class=\"toc-item-num\">7 - </span>Valuation with Exit Multiple</a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Import-Python-modules\"><span class=\"toc-item-num\">1 - </span>Import <code>Python</code> modules</a></div><div class=\"lev1\"><a href=\"#Set-CONSTANTS\"><span class=\"toc-item-num\">2 - </span>Set <em>CONSTANTS</em></a></div><div class=\"lev1\"><a href=\"#Create-Valuation-Model\"><span class=\"toc-item-num\">3 - </span>Create Valuation Model</a></div><div class=\"lev1\"><a href=\"#Import-Data\"><span class=\"toc-item-num\">4 - </span>Import Data</a></div><div class=\"lev1\"><a href=\"#Set-Outputs-to-Display\"><span class=\"toc-item-num\">5 - </span>Set Outputs to Display</a></div><div class=\"lev1\"><a href=\"#Valuation-by-DCF\"><span class=\"toc-item-num\">6 - </span>Valuation by DCF</a></div><div class=\"lev1\"><a href=\"#Valuation-with-Exit-Multiple\"><span class=\"toc-item-num\">7 - </span>Valuation with Exit Multiple</a></div>"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "import numpy\n",
     "import pandas\n",
     "\n",
-    "from FinSymPy.NewVenture import NewVentureValuationModel\n",
+    "from CorpFin.Valuation import ValuationModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
    ]
   },
@@ -86,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create `NewVentureValuationModel`"
+    "# Create Valuation Model"
    ]
   },
   {
@@ -142,7 +142,7 @@
    ],
    "source": [
     "model = \\\n",
-    "    NewVentureValuationModel(\n",
+    "    ValuationModel(\n",
     "        venture_name='edocs',\n",
     "        year_0=YEAR_0,\n",
     "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)"
@@ -670,7 +670,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Val_of_FCF</th>\n",
-       "      <td>6,741,269.00</td>\n",
+       "      <td>6,741,268.50</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -736,7 +736,7 @@
        "TV_EBITMultiple                                                    \n",
        "                                                                   \n",
        "VALUATION calcs:                                                   \n",
-       "Val_of_FCF                            6,741,269.00                 \n",
+       "Val_of_FCF                            6,741,268.50                 \n",
        "Val_of_TV                            90,183,168.00                 \n",
        "Val                                  96,924,432.00                 \n",
        "\n",
@@ -1218,7 +1218,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Val_of_FCF</th>\n",
-       "      <td>6,741,269.00</td>\n",
+       "      <td>6,741,268.50</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -1284,7 +1284,7 @@
        "TV_EBITMultiple                                                     \n",
        "                                                                    \n",
        "VALUATION calcs:                                                    \n",
-       "Val_of_FCF                             6,741,269.00                 \n",
+       "Val_of_FCF                             6,741,268.50                 \n",
        "Val_of_TV                            274,062,528.00                 \n",
        "Val                                  280,803,776.00                 \n",
        "\n",
